<resources>
    <string name="app_name"><u>twenty-seven</u></string>
    <string name="title_activity_mode_selection">ModeSelectionActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="clear">Clear Grid</string>
    <string name="stopwatch_default">00:00.00</string>
    <string name="paired_devices">Paired devices:</string>
    <string name="available_devices">Available devices:</string>
    <string name="scanning">Scanning...</string>
    <string name="scan_devices">Scan Devices</string>
    <string name="openchat">openChat</string>
    <string name="open_bt_page">Open BT page</string>
    <string name="status_default">Status: Not connected</string>
    <string name="start_image_recognition">Start Image Recognition</string>
    <string name="stop_image_recognition">Stop Image Recognition</string>
    <string name="reset_image_recognition">Reset Image Recognition</string>
    <string name="back_to_mode_selection">Back to Mode Selection</string>
    <string name="send_obstacle_positions">Send Obstacle Positions</string>
    <string name="add_obstacles">Add Obstacles</string>
</resources>