<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bluetooth.scanningActivity">

    <ProgressBar
        android:id="@+id/scanningCircle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/blue_jeans"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/scanningText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scanningCircle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lato_regular"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/scanning"
        android:textColor="@color/blue_jeans"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/pairedDevicesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scanningText"
        android:layout_alignStart="@id/pairedDevicesList"
        android:layout_alignEnd="@id/pairedDevicesList"
        android:layout_marginTop="50dp"
        android:text="@string/paired_devices"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/blue_jeans"
        android:textSize="20sp"
        android:textAlignment="center"/>

    <ListView
        android:id="@+id/pairedDevicesList"
        android:layout_width="400dp"
        android:layout_height="450dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/pairedDevicesText"
        android:divider="@color/white"/>

    <TextView
        android:id="@+id/availableDevicesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scanningText"
        android:layout_alignStart="@id/availableDevicesList"
        android:layout_alignEnd="@id/availableDevicesList"
        android:layout_marginTop="50dp"
        android:text="@string/available_devices"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/blue_jeans"
        android:textSize="20sp"
        android:textAlignment="center"/>

    <ListView
        android:id="@+id/availableDevicesList"
        android:layout_width="400dp"
        android:layout_height="450dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="15dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/availableDevicesText"
        android:divider="@color/white"/>

</RelativeLayout>